# agentos

./: .gitattributes  .gitignore  .pnpmfile.cjs  .secure-exec-local-path  AGENTOS-WEB-ASYNC-AGENTS.md  AGENTOS-WEB-CONVERGENCE.md  AGENTOS-WEB-REAL-TERMINAL.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  biome.json  justfile  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
crates/actor-uds-client/: Cargo.toml  build.rs
crates/actor-uds-client/protocol/: v1.bare
crates/actor-uds-client/src/: generated.rs  lib.rs  versioned.rs
crates/actor-uds-client/tests/: client.rs
crates/agentos-actor-plugin/: Cargo.toml  build.rs
crates/agentos-actor-plugin/src/: config.rs  host_ctx.rs  http.rs  lib.rs  persistence.rs  persistence_e2e.rs  vm.rs
crates/agentos-actor-plugin/tests/: action_contract.rs
crates/agentos-protocol/: Cargo.toml  build.rs
crates/agentos-protocol/protocol/: agent_os_acp_v1.bare
crates/agentos-protocol/src/: lib.rs
crates/agentos-protocol/tests/: roundtrip.rs
crates/agentos-sidecar/: CLAUDE.md  Cargo.toml
crates/agentos-sidecar-browser/: Cargo.toml
crates/agentos-sidecar-browser/src/: acp_host.rs  lib.rs  pending_frames.rs  wasm.rs
crates/agentos-sidecar-core/: Cargo.toml
crates/agentos-sidecar-core/src/: AGENTOS_SYSTEM_PROMPT.md  behavior.rs  codec.rs  engine.rs  host.rs  json_rpc.rs  lib.rs  session.rs
crates/agentos-sidecar-core/tests/: acp_conformance.rs  real_agent_round_trip.rs
crates/agentos-sidecar/src/: AGENTOS_SYSTEM_PROMPT.md  acp_extension.rs  lib.rs  main.rs  session_store.rs
crates/agentos-sidecar/tests/: acp_adapter_restart.rs  acp_adapter_stderr.rs  acp_extension.rs  acp_wrapper_conformance.rs
crates/execution/: CLAUDE.md  Cargo.toml  build.rs
crates/execution/assets/: agentos-wasm-abi.json  v8-bridge.js  v8-bridge.source.js  wasi-preview1-imports.json
crates/execution/benchmarks/: node-import-baseline.md
crates/execution/src/: benchmark.rs  javascript.rs  lib.rs  node_import_cache.rs  python.rs  signal.rs  v8_host.rs  v8_ipc.rs  v8_runtime.rs  wasm.rs
crates/execution/tests/: backend_lifecycle.rs  backend_payload_bounds.rs  benchmark.rs  bridge.rs  cjs_esm_interop.rs  javascript_v8.rs  module_resolution.rs  permission_flags.rs  process.rs  python.rs  python_prewarm.rs  runtime_topology.rs  smoke.rs  wasi_path_open_read_not_blocked.rs  wasm.rs  wasm_abi_link_contract.rs  wasm_host_fs_errno_contract.rs  wasm_host_net_errno_contract.rs  wasm_nonblocking_stdin.rs  wasm_preview1_memory_bounds.rs  wasm_structured_error_contract.rs
crates/kernel/: CLAUDE.md  Cargo.toml
crates/kernel/assets/: base-filesystem.json
crates/kernel/src/: command_registry.rs  device_layer.rs  dns.rs  fd_table.rs  kernel.rs  lib.rs  mount_table.rs  overlay_fs.rs  permissions.rs  pipe_manager.rs  poll.rs  process_runtime.rs  process_table.rs  pty.rs  resource_accounting.rs  root_fs.rs  socket_table.rs  system.rs  user.rs  vfs.rs
crates/kernel/tests/: agentos_read_only.rs  api_surface.rs  bridge.rs  bridge_support.rs  command_registry.rs  dac.rs  default_deny_guards.rs  device_layer.rs  dns_resolution.rs  fd_table.rs  identity.rs  kernel_integration.rs  loopback_routing.rs  mount_plugin.rs  mount_table.rs  ownership.rs  permissions.rs  pipe_manager.rs  poll.rs  process_table.rs  pty.rs  resource_accounting.rs  root_fs.rs  smoke.rs  socket_permissions.rs  socket_table.rs  stdio_devices.rs  tcp_data_plane.rs  tcp_listener.rs  udp_datagram.rs  unix_domain_socket.rs  user.rs  vfs.rs  virtual_process.rs
crates/native-baseline/: Cargo.toml  README.md
crates/native-baseline/src/: main.rs
crates/native-sidecar-browser/: CLAUDE.md  Cargo.toml
crates/native-sidecar-browser/src/: lib.rs  package_projection.rs  service.rs  wasm.rs  wire_dispatch.rs
crates/native-sidecar-browser/tests/: bridge.rs  service.rs  smoke.rs  wire_dispatch.rs
crates/native-sidecar-core/: Cargo.toml
crates/native-sidecar-core/src/: bindings.rs  bridge_bytes.rs  captured_output.rs  command_line.rs  cron.rs  defaults.rs  diagnostics.rs  execution_defaults.rs  frames.rs  guest_fs.rs  guest_net.rs  guest_pty.rs  identity.rs  layers.rs  lib.rs  limits.rs  permissions.rs  root_fs.rs  router.rs  signals.rs  tools.rs
crates/node-runtime-wasm/: Cargo.toml
crates/node-runtime-wasm/artifacts/: nested-bootstrap.wasm  pthread-runtime.wasm
crates/node-runtime-wasm/cmake/: agentos-toolchain.cmake
crates/node-runtime-wasm/probes/: manifest.json  nested-bootstrap.c  pthread-manifest.json  pthread-runtime.c
crates/node-runtime-wasm/scripts/: build-openssl.sh  build-probes.sh  build-pthread-probe.sh  build-runtime.sh  vendor-sources.mjs
crates/node-runtime-wasm/src/: lib.rs
crates/runtime/: Cargo.toml
crates/sidecar/: Cargo.toml  build.rs
crates/v8-runtime/: CLAUDE.md  Cargo.toml  build.rs  build_support.rs
crates/vfs-store/: CLAUDE.md  Cargo.toml
crates/wasm-abi-generator/: Cargo.toml
toolchain/: .gitignore  Cargo.toml  Makefile  codex-ref
toolchain/c/: Makefile
toolchain/conformance/: c-parity.test.ts  ci-artifact-availability.test.ts  ci-wasm-artifact-availability.test.ts  libc-test-conformance.test.ts  os-test-conformance.test.ts
toolchain/scripts/: build-codex-wasi.sh  clone-and-build-codex-wasi.sh  ensure-wasm-opt.sh  patch-std.sh  patch-vendor.sh  patch-wasi-libc.sh
toolchain/std-patches/: 0001-wasi-process-spawn.patch  0006-wasi-file-mode.patch  0009-wasi-split-paths.patch  0010-wasi-metadata-ext-fields.patch  0011-wasi-file-permissions-mode.patch  0012-wasi-hidden-preopen-path-alias.patch  0014-wasi-open-create-mode.patch  0015-wasi-directory-not-empty-error-kind.patch
toolchain/test-programs/: closefrom_test.c  credentials_test.c  fifo_test.c  flock_test.c  getgrouplist_bounds.c  libc_compat_contract.c  mmap_test.c  openat_test.c  openssl_handshake_smoke.c  pipe_edge.c  ppoll_contract.c  pthread_benchmark.c  pthread_conformance.c  pwritev_test.c  readdir_contract.c  self_stop_status.c  sqlite3_mem.c  ssh_proxy_helper.c  ssh_sk_helper_contract.c  sync_test.c  waitpid_status.c  xattr_test.c
(+8045 files in other folders)
