[package]
name = "agentos-sidecar-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser Agent OS sidecar wrapper"
publish = false

# cdylib for the wasm32 browser build (wasm-pack); rlib so native tests + the
# workspace can still link it as a library.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Host-free deps ONLY (this crate compiles to wasm32). Do NOT add agentos-sidecar
# (native: tokio/mio + native agentos-native-sidecar). Real ACP logic comes from a
# future host-free agentos-sidecar-core.
agentos-protocol = { workspace = true }
agentos-sidecar-core = { workspace = true }
agentos-bridge = { workspace = true }
agentos-native-sidecar-browser = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
serde_bare = "0.5"
