[package]
name = "agent-os-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared kernel plane for Agent OS native and browser sidecars"

[dependencies]
agent-os-bridge = { workspace = true }
base64 = "0.22"
getrandom = "0.2"
hickory-resolver = "0.26.0-beta.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
