[package]
name = "agentos-native-baseline"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Native floor for the differential perf harness. std-only on purpose: this is the
# glibc fork/posix_spawn + execve baseline that the agent-os "emulation tax" divides
# against. No agentos deps — it must measure the host, not the emulator.

[[bin]]
name = "agentos-native-baseline"
path = "src/main.rs"

[dependencies]
