[package]
name = "agentos-native-sidecar-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser-side Secure Exec sidecar scaffold"
# Browser support is retained for a future migration but intentionally disabled
# and must not be published while it is outside the unified reactor contract.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentos-bridge = { workspace = true }
agentos-kernel = { workspace = true }
agentos-native-sidecar-core = { workspace = true }
agentos-sidecar-protocol = { workspace = true }
agentos-vm-config = { workspace = true }
base64 = "0.22"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
