[package]
name = "agentos-native-sidecar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Secure Exec sidecar logic for native and browser shells"

[dependencies]
agentos-bridge = { workspace = true }
agentos-kernel = { workspace = true }
agentos-sidecar-protocol = { workspace = true }
agentos-vm-config = { workspace = true }
base64 = "0.22"
serde_json = "1.0"
vfs = { workspace = true }
