[package]
name = "agentos-native-sidecar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Secure Exec sidecar logic for native and browser shells"

[dependencies]
agentos-bridge = { workspace = true }
agentos-kernel = { workspace = true }
agentos-sidecar-protocol = { workspace = true }
agentos-vm-config = { workspace = true }
base64 = "0.22"
chrono = "0.4"
croner = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
vfs = { workspace = true }
