[package]
name = "agentos-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentOS language execution virtual filesystem backends"

[dependencies]
async-trait = "0.1"
aws-sdk-s3 = "1"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vfs = { workspace = true }

[dev-dependencies]
agentos-runtime = { workspace = true }
aws-config = "1"
aws-credential-types = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
