[package]
name = "agentos-wasm-abi-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Pinned WITX to AgentOS WASM ABI manifest generator"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
witx = "=0.9.1"
wat = "1"
