[package]
name = "agentos-wasi-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASI PTY-based process management via host_process FFI for interactive sessions"

[dependencies]
wasi-ext = { path = "../../wasi-ext" }
wasi-spawn = { package = "agentos-wasi-spawn", path = "../wasi-spawn" }
