[package]
workspace = "../../../../../toolchain"
name = "cmd-chown"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "chown-compatible AgentOS VM ownership command"

[[bin]]
name = "chown"
path = "src/main.rs"

[dependencies]
wasi-ext = { path = "../../../../../toolchain/crates/wasi-ext" }
