[package]
workspace = "../../../../../toolchain"
name = "cmd-column"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "column standalone binary for agentos VM"

[[bin]]
name = "column"
path = "src/main.rs"

[dependencies]
agentos-column = { path = "../column" }
