[package]
workspace = "../../../../../toolchain"
name = "cmd-env"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "env standalone binary for agentos VM"

[[bin]]
name = "env"
path = "src/main.rs"

[dependencies]
shims = { package = "agentos-shims", path = "../../../../../toolchain/crates/libs/shims" }
