[package]
workspace = "../../../../../toolchain"
name = "cmd-getent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "getent-compatible AgentOS VM account database query command"

[[bin]]
name = "getent"
path = "src/main.rs"

[dependencies]
wasi-ext = { path = "../../../../../toolchain/crates/wasi-ext" }
