[package]
workspace = "../../../../../toolchain"
name = "cmd-id"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "id-compatible virtual credential query command for AgentOS VMs"

[[bin]]
name = "id"
path = "src/main.rs"

[dependencies]
wasi-ext = { path = "../../../../../toolchain/crates/wasi-ext" }
