[package]
workspace = "../../../../../toolchain"
name = "cmd-mount"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mount-compatible remount command for AgentOS VMs"

[[bin]]
name = "mount"
path = "src/main.rs"

[dependencies]
wasi-ext = { path = "../../../../../toolchain/crates/wasi-ext" }
