[package]
workspace = "../../../../../toolchain"
name = "cmd-nice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "nice standalone binary for secure-exec VM"

[[bin]]
name = "nice"
path = "src/main.rs"

[dependencies]
shims = { package = "secureexec-shims", path = "../../../../../toolchain/crates/libs/shims" }
